--- a/flaskdo/templates/login/login.html
+++ b/flaskdo/templates/login/login.html
@@ -10,21 +10,14 @@
 {% endif %}
 <div class="container">
   <form class="form-signin" method="POST">
-    <img
-      class="mb-4"
-      src="/docs/4.5/assets/brand/bootstrap-solid.svg"
-      alt=""
-      width="72"
-      height="72"
-    />
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="username" class="sr-only">Username</label>
+    <label for="email" class="sr-only">Email</label>
     <input
       type="text"
-      id="username"
-      name="username"
+      id="email"
+      name="email"
       class="form-control mb-3"
-      placeholder="Username"
+      placeholder="Email"
       required=""
       autofocus=""
     />
