--- a/flaskdo/templates/base.html
+++ b/flaskdo/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
     <meta charset="utf-8" />
-    <title>{% block title %}Signup{% endblock %}</title>
+    <title>{% block title %}FlaskDo{% endblock %}</title>
     <link
       rel="icon"
       type="image/x-icon"
@@ -23,7 +23,7 @@
   <body class="d-flex flex-column h-100">
     <!-- navigation section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="">FlaskDo</a>
+      <a class="navbar-brand" href="/">FlaskDo</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,7 +37,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        {% if is_logged_in %}
+        {% if is_logged_in() %}
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('task_list.mylists')}}"
