--- a/flaskdo/templates/task-lists/add-task-list.html
+++ b/flaskdo/templates/task-lists/add-task-list.html
@@ -1,4 +1,9 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+<!-- Override page title from the template -->
+{% block title %}Add Task List{% endblock %}
+
+<!-- Content block -->
+{% block content %}
 <div class="container">
   <form class="form-signin" method="POST">
     <h1 class="h3 mb-3 font-weight-normal">Add Task List</h1>
