--- a/flaskdo/templates/tasks/add-task.html
+++ b/flaskdo/templates/tasks/add-task.html
@@ -1,4 +1,9 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+<!-- Override page title from the template -->
+{% block title %}Add Task{% endblock %}
+
+<!-- Content block -->
+{% block content %}
 <div class="container">
   <form class="form-signin" method="POST">
     <h1 class="h3 mb-3 font-weight-normal">Add Task</h1>
@@ -12,11 +17,11 @@
       required=""
       autofocus=""
     />
-    <label for="list-description" class="sr-only">Description</label>
+    <label for="task-description" class="sr-only">Description</label>
     <textarea
       type="text"
-      id="list-description"
-      name="list-description"
+      id="task-description"
+      name="task-description"
       class="form-control mb-3"
       placeholder="Description"
       required=""
@@ -26,14 +31,18 @@
     <select id="prioritySelect" name="prioritySelect" class="form-control mb-3">
       <option selected>Choose a Priorty...</option>
       {% for priority_value, priority_name in priorities.items() %}
-      <option value="{{priority_value}}">{{priority_name}}</option>
+      <option value="{{priority_value}}">{{priority_name | capitalize}}</option>
       {% endfor %}
     </select>
 
     <label for="taskListSelect">Task List</label>
     <select id="taskListSelect" name="taskListSelect" class="form-control mb-3">
       <option selected>Choose a Task List...</option>
-      <option value="1">Work Task List</option>
+      {% for task_list in task_lists %}
+      <option value="{{task_list['id']}}">
+        {{task_list['name'] | capitalize}}
+      </option>
+      {% endfor %}
     </select>
     <button class="mt-3 btn btn-lg btn-primary btn-block" type="submit">
       Add Task List
