CRUD implemented for Task and TaskList

--- a/flaskdo/templates/base.html
+++ b/flaskdo/templates/base.html
@@ -45,7 +45,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">My Tasks</a>
+            <a class="nav-link" href="{{url_for('task.mytasks')}}">My Tasks</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Profile</a>
