Updated task list view.

--- a/flaskdo/templates/task-lists/task-lists.html
+++ b/flaskdo/templates/task-lists/task-lists.html
@@ -23,8 +23,9 @@
             <path
               fill-rule="evenodd"
               d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
-            /></svg
-        ></a>
+            />
+          </svg>
+        </a>
         <a
           href="{{url_for('task_list.update_list', tasklist_id= list.id)}}"
           class="btn btn-primary"
