--- a/flaskdo/templates/base.html
+++ b/flaskdo/templates/base.html
@@ -47,25 +47,33 @@
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('task.mytasks')}}">My Tasks</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('login.logout')}}">Logout</a>
-          </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" method="POST" action="">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            name="keyword"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
+
+        <ul class="navbar-nav">
+          <div class="dropdown">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Hello, {{get_first_name()}}!
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a
+                class="dropdown-item"
+                href="{{url_for('profile.view_profile')}}"
+                >Profile</a
+              >
+
+              <a class="dropdown-item" href="{{url_for('login.logout')}}"
+                >Logout</a
+              >
+            </div>
+          </div>
+        </ul>
         {% else %}
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
