--- a/flaskdo/templates/tasks/mytasks.html
+++ b/flaskdo/templates/tasks/mytasks.html
@@ -15,6 +15,7 @@
             <th scope="col">Title</th>
             <th scope="col">Description</th>
             <th scope="col">Task List</th>
+            <th scope="col">Favorite Task</th>
             <th scope="col">Actions</th>
           </tr>
         </thead>
@@ -24,7 +25,12 @@
             <th scope="row">{{loop.index}}</th>
             <td>{{task.title}}</td>
             <td>{{task.description}}</td>
-            <td>{{task.name}}</td>
+            <td>{{task.tags}}</td>
+            
+            <td><div class="custom-control custom-checkbox">
+              <input type="checkbox" class="custom-control-input" id="tableDefaultCheck1">
+              <label class="custom-control-label" for="tableDefaultCheck1">YES</label>
+            </div></td>
             <td>
               <a
                 href="{{url_for('task.view_task', task_id= task.id)}}"
@@ -41,8 +47,8 @@
                   <path
                     fill-rule="evenodd"
                     d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
-                  /></svg
-              ></a>
+                  /></svg>
+              </a>
               <a
                 href="{{url_for('task.update_task', task_id= task.id)}}"
                 class="btn btn-primary"
@@ -57,8 +63,8 @@
                   <path
                     fill-rule="evenodd"
                     d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"
-                  /></svg
-              ></a>
+                  /></svg>
+              </a>
               <a
                 href="{{url_for('task.delete_task', task_id= task.id)}}"
                 class="btn btn-primary"
@@ -73,8 +79,8 @@
                   <path
                     fill-rule="evenodd"
                     d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"
-                  /></svg
-              ></a>
+                  /></svg>
+              </a>
             </td>
           </tr>
           {% endfor %}
