--- a/flaskdo/templates/login/signup.html
+++ b/flaskdo/templates/login/signup.html
@@ -11,9 +11,30 @@
 <div class="container">
   <form class="form-signin" method="POST">
     <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
-    <label for="email" class="sr-only">Email</label>
+    <label for="first_name" >Firstname</label>
     <input
       type="text"
+      id="first_name"
+      name="first_name"
+      class="form-control mb-3"
+      placeholder="first_name"
+      required=""
+      autofocus=""
+    />
+    <label for="last_name" >Lastname</label>
+    <input
+      type="text"
+      id="last_name"
+      name="last_name"
+      class="form-control mb-3"
+      placeholder="last_name"
+      required=""
+      autofocus=""
+    />
+    
+    <label for="email" >Email</label>
+    <input
+      type="email"
       id="email"
       name="email"
       class="form-control mb-3"
@@ -21,7 +42,7 @@
       required=""
       autofocus=""
     />
-    <label for="password" class="sr-only">Password</label>
+    <label for="password">Password</label>
     <input
       type="password"
       id="password"
@@ -29,6 +50,33 @@
       class="form-control mb-3"
       placeholder="Password"
       required=""
+    />
+    <label for="avatarURL">avatarURL</label>
+    <input
+      type="text"
+      id="avatarURL"
+      name="avatarURL"
+      class="form-control mb-3"
+      placeholder="avatarURL"
+
+    />
+    <label for="birthdate">Birthday</label>
+    <input
+      type="date"
+      id="birthdate"
+      name="birthdate"
+      class="form-control mb-3"
+      placeholder="birthdate"
+
+    />
+    <label for="address">Address</label>
+    <input
+      type="text"
+      id="address"
+      name="address"
+      class="form-control mb-3"
+      placeholder="Address"
+
     />
     <button class="mt-3 btn btn-lg btn-primary btn-block" type="submit">
       Create user
