--- a/flaskdo/templates/profile/profile.html
+++ b/flaskdo/templates/profile/profile.html
@@ -10,8 +10,7 @@
     <div class="card" style="width: 18rem">
       <img src="{{user.avatarURL}}" class="card-img-top" alt="..." />
       <div class="card-body">
-        <h5 class="card-title">{{user.first_name}}, {{user.last_name}}</h5>
-        <p class="card-text">{{user.username}}</p>
+        <h5 class="card-title">{{user.firstname}}, {{user.lastname}}</h5>
         <a href="{{url_for('profile.edit_profile')}}" class="btn btn-primary"
           ><svg
             width="1em"
@@ -24,20 +23,61 @@
             <path
               fill-rule="evenodd"
               d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"
-            /></svg
-        ></a>
+            /></svg>
+        </a>
+
+        <a class="btn btn-primary" data-target="#conformationModel" data-toggle="modal"
+          >
+          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
+</svg>
+        </a>
+
+     <br/>
+     change password {{user.firstname}}? 
+     <a class="btn btn-danger" href="{{url_for('profile.change_password')}}">
+       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-lock-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+         <path d="M2.5 9a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-7a2 2 0 0 1-2-2V9z"/>
+         <path fill-rule="evenodd" d="M4.5 4a3.5 3.5 0 1 1 7 0v3h-1V4a2.5 2.5 0 0 0-5 0v3h-1V4z"/>
+       </svg>
+     </a>     
+
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"><b>Birthdate:</b> {{user.birthdate}}</li>
-        <li class="list-group-item"><b>Address:</b> 123 Sesame Street</li>
+        <li class="list-group-item"><b>Birthdate:</b> {{user.bod}}</li>
+        <li class="list-group-item"><b>Address:</b> {{user.address}}</li>
       </ul>
       <div class="card-body">
         <p><b>Task Lists:</b></p>
-        <a href="#" class="card-link">Ernie</a>
-        <a href="#" class="card-link">Franklin</a>
+        {% for tasklist in tasklists%}
+        <a class="ml-2" href="{{url_for('task_list.mylists')}}">{{tasklist.name}}</a>
+        {% endfor %}
       </div>
+ 
     </div>
     <div></div>
+  </div>
+
+
+  <!-- Confirmation Model  -->
+  <div class="modal" tabindex="-1" role="dialog" id="conformationModel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Delete Account</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Delete Account ?</p>
+        </div>
+        <div class="modal-footer">
+          <a href="{{url_for('profile.delete_profile')}}" class="btn btn-primary">YES</a>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">NO</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
